Added pointers to indicate current page

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,9 @@
     <div class="nav-container">
         <div class="nav-bar">
             <a href="index.html" class="nav-items">Portfolio</a>
-            <a href="about.html" class="nav-items">About Me</a>
+            <a href="about.html" class="nav-items">About Me
+                <div class="pointer-arrow" id="contact-pointer"></div>
+            </a>
             <a href="contact.html" class="nav-items">Contact Me</a>
         </div>
     </div>
@@ -27,7 +29,8 @@
     </div>
     <div class="container social-container">
         <div class="social-item left">
-            <a href="https://github.com/FelixLetheren" target="_blank"><img src="images/github-logo.png" alt="Git Hub Logo"></a>
+            <a href="https://github.com/FelixLetheren" target="_blank"><img src="images/github-logo.png"
+                                                                            alt="Git Hub Logo"></a>
             <a href="https://github.com/FelixLetheren" target="_blank">FelixLetheren</a>
         </div>
         <div class="social-item right">
@@ -39,11 +42,13 @@
     </div>
     <div class="container social-container">
         <div class="social-item left">
-            <a href="https://twitter.com/FelixLetheren" target="_blank"><img src="images/twitter.png" alt="twitter logo"></a>
+            <a href="https://twitter.com/FelixLetheren" target="_blank"><img src="images/twitter.png"
+                                                                             alt="twitter logo"></a>
             <a href="https://twitter.com/FelixLetheren" target="_blank">@FelixLetheren</a>
         </div>
         <div class="social-item right">
-            <a href="https://www.instagram.com/felixletheren123/" target="_blank"><img src="images/instagram.png" alt="instagram logo"></a>
+            <a href="https://www.instagram.com/felixletheren123/" target="_blank"><img src="images/instagram.png"
+                                                                                       alt="instagram logo"></a>
             <a href="https://www.instagram.com/felixletheren123/" target="_blank">felixletheren123</a>
         </div>
     </div>
