--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div class="nav-container">
         <div class="nav-bar">
             <a href="index.html" class="nav-items">Portfolio</a>
-            <a href="about.html" class="nav-items">About Me</a>
+            <a href="about.html" class="nav-items">About Me
+                <div class="pointer-arrow" id="portfolio-pointer"></div>
+            </a>
             <a href="contact.html" class="nav-items">Contact Me</a>
         </div>
     </div>
@@ -25,7 +27,8 @@
     <div class="portfolio-container">
         <div class="portfolio-item">
             <a href="https://github.com/FelixLetheren/mayden-academy-logo"><img class="portfolio-img"
-                                                                                src="images/mayden-logo.png" alt="Mayden Academy Logo"></a>
+                                                                                src="images/mayden-logo.png"
+                                                                                alt="Mayden Academy Logo"></a>
             <a href="https://github.com/FelixLetheren/mayden-academy-logo"><h3>Mayden Academy logo</h3></a>
             <h4>A small project to recreate the Mayden Academy logo using just CSS and HTML</h4>
         </div>
