--- a/about.html
+++ b/about.html
@@ -13,7 +13,9 @@
     <div class="nav-container">
         <div class="nav-bar">
             <a href="index.html" class="nav-items">Portfolio</a>
-            <a href="about.html" class="nav-items">About Me</a>
+            <a href="about.html" class="nav-items">About Me
+                <div class="pointer-arrow" id="about-pointer"></div>
+            </a>
             <a href="contact.html" class="nav-items">Contact Me</a>
         </div>
     </div>
