Added another work

--- a/about.html
+++ b/about.html
@@ -63,10 +63,24 @@
                 </div>
                 <h3>Thai Leisure Group</h3>
                 <h2>Business Manager</h2>
+                <h3>1 yr 2 mos</h3>
                 <p>During my time in this role I gained valuable experience in managing the day-to-day running
                     of a business. This involved managing over 40 employees, maintaining health and safety standards,
                     co-ordinating maintenance, balancing the profit and loss report, along with other
                     responsibilities.</p>
+            </div>
+            <div class="exp-entry">
+                <div class="exp-img">
+                    <img src="images/Thai-Leisure-Group-logo.png" alt="Thai Leisure Group Logo">
+                </div>
+                <h3>Thai Leisure Group</h3>
+                <h2>Assistant Business Manager</h2>
+                <h3>1 yr 10 mos</h3>
+                <p>In this position I worked between Southampton and Bath supporting both sites. My responsibilities in
+                    this role were managing documentation of new staff to make sure we were compliant
+                    with HMRC regulations, making sure all preventative maintenance was up to take and certificates were
+                    available in an inspection along with other responsibilities.
+                </p>
             </div>
         </div>
     </div>
