--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                 <p>In this position I worked between Southampton and Bath supporting both sites. My responsibilities in
                     this role were managing documentation of new staff to make sure we were compliant
                     with HMRC regulations, making sure all preventative maintenance was up to take and certificates were
-                    available in an inspection along with other responsibilities.
+                    available in an inspection, along with other responsibilities.
                 </p>
             </div>
         </div>
