--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
     <div class="nav-container">
         <div class="nav-bar">
             <a href="index.html" class="nav-items">Portfolio</a>
-            <a href="about.html" class="nav-items">About Me
+            <a href="about.html" class="nav-items">About Me</a>
+            <a href="contact.html" class="nav-items">Contact Me
                 <div class="pointer-arrow" id="contact-pointer"></div>
             </a>
-            <a href="contact.html" class="nav-items">Contact Me</a>
         </div>
     </div>
 </header>
