--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h2 class="logo">FELIX<br>LETHEREN</h2>
     <div class="nav-container">
         <div class="nav-bar">
-            <a href="index.html" class="nav-items">Portfolio</a>
-            <a href="about.html" class="nav-items">About Me
+            <a href="index.html" class="nav-items">Portfolio
                 <div class="pointer-arrow" id="portfolio-pointer"></div>
             </a>
+            <a href="about.html" class="nav-items">About Me</a>
             <a href="contact.html" class="nav-items">Contact Me</a>
         </div>
     </div>
