--- a/index.html
+++ b/index.html
@@ -28,12 +28,20 @@
         <div class="portfolio-item">
             <a href="https://github.com/FelixLetheren/mayden-academy-logo"><img class="portfolio-img"
                                                                                 src="images/mayden-logo.png"
-                                                                                alt="Mayden Academy Logo"></a>
-            <a href="https://github.com/FelixLetheren/mayden-academy-logo"><h3>Mayden Academy logo</h3></a>
+                                                                                alt="Mayden Academy Logo">
+                <div class="portfolio-cover">
+                    <h2 class="portfolio-cover-link">GitHub link</h2>
+                </div>
+            </a>
+            <a class="portfolio-title" href="https://github.com/FelixLetheren/mayden-academy-logo"><h3>Mayden Academy
+                logo</h3></a>
             <h4>A small project to recreate the Mayden Academy logo using just CSS and HTML</h4>
         </div>
         <div class="portfolio-item">
             <a href="#"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder"></a>
+            <div class="portfolio-cover">
+                <h2 class="portfolio-cover-link">GitHub link</h2>
+            </div>
             <a href="#"><h3>Title</h3></a>
             <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
                 course.</h4>
@@ -42,12 +50,18 @@
     <div class="portfolio-container">
         <div class="portfolio-item">
             <a href="#"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder"></a>
+            <div class="portfolio-cover">
+                <h2 class="portfolio-cover-link">GitHub link</h2>
+            </div>
             <a href="#"><h3>Title</h3></a>
             <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
                 course.</h4>
         </div>
         <div class="portfolio-item">
             <a href="#"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder"></a>
+            <div class="portfolio-cover">
+                <h2 class="portfolio-cover-link">GitHub link</h2>
+            </div>
             <a href="#"><h3>Title</h3></a>
             <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
                 course.</h4>
@@ -56,12 +70,18 @@
     <div class="portfolio-container">
         <div class="portfolio-item">
             <a href="#"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder"></a>
+            <div class="portfolio-cover">
+                <h2 class="portfolio-cover-link">GitHub link</h2>
+            </div>
             <a href="#"><h3>Title</h3></a>
             <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
                 course.</h4>
         </div>
         <div class="portfolio-item">
             <a href="#"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder"></a>
+            <div class="portfolio-cover">
+                <h2 class="portfolio-cover-link">GitHub link</h2>
+            </div>
             <a href="#"><h3>Title</h3></a>
             <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
                 course.</h4>
