--- a/index.html
+++ b/index.html
@@ -33,15 +33,16 @@
                     <h2 class="portfolio-cover-link">GitHub link</h2>
                 </div>
             </a>
-            <a class="portfolio-title" href="https://github.com/FelixLetheren/mayden-academy-logo"><h3>Mayden Academy
+            <a href="https://github.com/FelixLetheren/mayden-academy-logo"><h3>Mayden Academy
                 logo</h3></a>
             <h4>A small project to recreate the Mayden Academy logo using just CSS and HTML</h4>
         </div>
         <div class="portfolio-item">
-            <a href="#"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder"></a>
-            <div class="portfolio-cover">
-                <h2 class="portfolio-cover-link">GitHub link</h2>
-            </div>
+            <a href="#"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder">
+                <div class="portfolio-cover">
+                    <h2 class="portfolio-cover-link">GitHub link</h2>
+                </div>
+            </a>
             <a href="#"><h3>Title</h3></a>
             <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
                 course.</h4>
@@ -49,19 +50,21 @@
     </div>
     <div class="portfolio-container">
         <div class="portfolio-item">
-            <a href="#"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder"></a>
-            <div class="portfolio-cover">
-                <h2 class="portfolio-cover-link">GitHub link</h2>
-            </div>
+            <a href="#"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder">
+                <div class="portfolio-cover">
+                    <h2 class="portfolio-cover-link">GitHub link</h2>
+                </div>
+            </a>
             <a href="#"><h3>Title</h3></a>
             <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
                 course.</h4>
         </div>
         <div class="portfolio-item">
-            <a href="#"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder"></a>
-            <div class="portfolio-cover">
-                <h2 class="portfolio-cover-link">GitHub link</h2>
-            </div>
+            <a href="#"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder">
+                <div class="portfolio-cover">
+                    <h2 class="portfolio-cover-link">GitHub link</h2>
+                </div>
+            </a>
             <a href="#"><h3>Title</h3></a>
             <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
                 course.</h4>
@@ -69,19 +72,21 @@
     </div>
     <div class="portfolio-container">
         <div class="portfolio-item">
-            <a href="#"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder"></a>
-            <div class="portfolio-cover">
-                <h2 class="portfolio-cover-link">GitHub link</h2>
-            </div>
+            <a href="#"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder">
+                <div class="portfolio-cover">
+                    <h2 class="portfolio-cover-link">GitHub link</h2>
+                </div>
+            </a>
             <a href="#"><h3>Title</h3></a>
             <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
                 course.</h4>
         </div>
         <div class="portfolio-item">
-            <a href="#"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder"></a>
-            <div class="portfolio-cover">
-                <h2 class="portfolio-cover-link">GitHub link</h2>
-            </div>
+            <a href="#"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder">
+                <div class="portfolio-cover">
+                    <h2 class="portfolio-cover-link">GitHub link</h2>
+                </div>
+            </a>
             <a href="#"><h3>Title</h3></a>
             <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
                 course.</h4>
