--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
     </div>
     <div class="portfolio-container">
         <div class="portfolio-item">
-            <a href="https://github.com/FelixLetheren/mayden-academy-logo" target="_blank"><img class="portfolio-img"
-                                                                                                src="images/mayden-logo.png"
-                                                                                                alt="Mayden Academy Logo">
+            <a href="https://github.com/FelixLetheren/mayden-academy-logo" target="_blank">
+                <img class="portfolio-img" src="images/mayden-logo.png" alt="Mayden Academy Logo">
                 <div class="portfolio-cover">
                     <h2 class="portfolio-cover-link">GitHub link</h2>
                 </div>
