--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
             <h4>A small project to recreate the Mayden Academy logo using just CSS and HTML</h4>
         </div>
         <div class="portfolio-item">
-            <a href="#" target="_blank"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder">
+            <a href="#" target="_blank"><img class="portfolio-img" src="images/fish-finder.png" alt="Placeholder">
                 <div class="portfolio-cover">
                     <h2 class="portfolio-cover-link">GitHub link</h2>
                 </div>
             </a>
-            <a href="#" target="_blank"><h3>Title</h3></a>
-            <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
-                course.</h4>
+            <a href="#" target="_blank"><h3>Fish Finder</h3></a>
+            <h4>A collectors app project that takes data from a MySQL database and displays the content in HTML using PHP.
+                It also has the feature to insert new fish into the database that are then displayed with the rest.
+            </h4>
         </div>
     </div>
     <div class="portfolio-container">
