--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             <h4>A small project to recreate the Mayden Academy logo using just CSS and HTML</h4>
         </div>
         <div class="portfolio-item">
-            <a href="#" target="_blank"><img class="portfolio-img" src="images/fish-finder.png" alt="Placeholder">
+            <a href="https://github.com/FelixLetheren/fish-finder" target="_blank"><img class="portfolio-img" src="images/fish-finder.png" alt="Placeholder">
                 <div class="portfolio-cover">
                     <h2 class="portfolio-cover-link">GitHub link</h2>
                 </div>
             </a>
-            <a href="#" target="_blank"><h3>Fish Finder</h3></a>
+            <a href="https://github.com/FelixLetheren/fish-finder" target="_blank"><h3>Fish Finder</h3></a>
             <h4>A collectors app project that takes data from a MySQL database and displays the content in HTML using PHP.
                 It also has the feature to insert new fish into the database that are then displayed with the rest.
             </h4>
