--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h4>A small project to recreate the Mayden Academy logo using just CSS and HTML</h4>
         </div>
         <div class="portfolio-item">
-            <a href="https://github.com/FelixLetheren/fish-finder" target="_blank"><img class="portfolio-img" src="images/fish-finder.png" alt="Placeholder">
+            <a href="https://github.com/FelixLetheren/fish-finder" target="_blank"><img class="portfolio-img" src="images/fish-finder.png" alt="Fish Finder">
                 <div class="portfolio-cover">
                     <h2 class="portfolio-cover-link">GitHub link</h2>
                 </div>
@@ -50,14 +50,14 @@
     </div>
     <div class="portfolio-container">
         <div class="portfolio-item">
-            <a href="#" target="_blank"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder">
+            <a href="https://github.com/Mayden-Academy/2019-top-cat" target="_blank"><img class="portfolio-img" src="images/dog-maze.png" alt="Dog Maze">
                 <div class="portfolio-cover">
                     <h2 class="portfolio-cover-link">GitHub link</h2>
                 </div>
             </a>
-            <a href="#" target="_blank"><h3>Title</h3></a>
-            <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
-                course.</h4>
+            <a href="https://dev.maydenacademy.co.uk/projects/2019Aug/2019-jul-maze/" target="_blank"><h3>Who's a good puppy?</h3></a>
+            <h4>A Javascript game where you stroke a dog from head to tail avoiding brushes along the way and and not letting your cursor
+            off the dog. Built using ES5 with Jquery and CSS animations.</h4>
         </div>
         <div class="portfolio-item">
             <a href="#" target="_blank"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder">
