Addded phone number and fixed horizontal scroll bar on contact page on smaller screens.

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
         <h1>Contact me</h1>
     </div>
     <div class="container email-box">
-        <h2 id="mail">felix.letheren@gmail.com</h2>
+        <h2 id="mail">felix.letheren+jobs@gmail.com <br> +44 7857 816670 </h2>
     </div>
     <div class="container social-container">
         <div class="social-item left">
