Added Mayden Academy aptitude test to portfolio.

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             <div class="skill-container">
                 <img class="skill-img" src="images/react-logo.png" alt="React logo">
                 <img class="skill-img" src="images/scrummaster.png" alt="scrum master logo">
-                <img class="skill-img" src="images/vagrant.png" alt="vagrant logo">
+                <img class="skill-img" src="images/git-logo.svg" alt="git logo">
             </div>
         </div>
     </div>
