--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
             off the dog. Built using ES5 with Jquery and CSS animations.</h4>
         </div>
         <div class="portfolio-item">
-            <a href="#" target="_blank"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder">
+            <a href="https://github.com/Mayden-Academy/aptitude-test" target="_blank"><img class="portfolio-img" src="images/aptitude%20test.png" alt="Aptitude Test">
                 <div class="portfolio-cover">
                     <h2 class="portfolio-cover-link">GitHub link</h2>
                 </div>
             </a>
-            <a href="#" target="_blank"><h3>Title</h3></a>
-            <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
-                course.</h4>
+            <a href="#" target="_blank"><h3>Mayden Academy Aptitude Test</h3></a>
+            <h4>A project working on legacy code from previous students on a larger code base. We used Gulp as a task runner to compile SASS.
+            For our JS we used ES6. </h4>
         </div>
     </div>
     <div class="portfolio-container">
