--- a/index.html
+++ b/index.html
@@ -72,14 +72,13 @@
     </div>
     <div class="portfolio-container">
         <div class="portfolio-item">
-            <a href="#" target="_blank"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder">
+            <a href="https://github.com/Mayden-Academy/2019-top-cat" target="_blank"><img class="portfolio-img" src="images/top-cat.png" alt="Placeholder">
                 <div class="portfolio-cover">
                     <h2 class="portfolio-cover-link">GitHub link</h2>
                 </div>
             </a>
-            <a href="#" target="_blank"><h3>Title</h3></a>
-            <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
-                course.</h4>
+            <a href="https://dev.maydenacademy.co.uk/projects/2019Jul/2019-top-cat/" target="_blank"><h3>Top Cat</h3></a>
+            <h4>A app that displays cats by breed from a MySQL database using PHP 7. An API scrape is used to create and populate the database..</h4>
         </div>
         <div class="portfolio-item">
             <a href="#" target="_blank"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder">
