--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
     </div>
     <div class="portfolio-container">
         <div class="portfolio-item">
-            <a href="https://github.com/FelixLetheren/mayden-academy-logo" target="_blank">
-                <img class="portfolio-img" src="images/mayden-logo.png" alt="Mayden Academy Logo">
+            <a href="https://github.com/katestarks/GameJamOct2019" target="_blank"><img class="portfolio-img" src="images/gloominate.png" alt="Gloominate">
                 <div class="portfolio-cover">
                     <h2 class="portfolio-cover-link">GitHub link</h2>
                 </div>
             </a>
-            <a href="https://github.com/FelixLetheren/mayden-academy-logo" target="_blank"><h3>Mayden Academy
-                logo</h3></a>
-            <h4>A small project to recreate the Mayden Academy logo using just CSS and HTML</h4>
+            <a href="https://darth-mediocrity.itch.io/gloominate" target="_blank"><h3>Gloominate</h3></a>
+            <h4>A Javascript game made for the Oct 2019 Ludum Dare Game Jam. I worked with a small team of former students to build a game over a weekend.
+            We used the Javascript library "Phaser 3" to help us build the game. It was a great experience to learn a new tool and produce something enjoyable
+            in limited time. </h4>
         </div>
         <div class="portfolio-item">
             <a href="https://github.com/FelixLetheren/fish-finder" target="_blank"><img class="portfolio-img" src="images/fish-finder.png" alt="Fish Finder">
@@ -81,14 +81,15 @@
             <h4>A app that displays cats by breed from a MySQL database using PHP 7. An API scrape is used to create and populate the database..</h4>
         </div>
         <div class="portfolio-item">
-            <a href="#" target="_blank"><img class="portfolio-img" src="images/placeholder.png" alt="Placeholder">
+            <a href="https://github.com/FelixLetheren/mayden-academy-logo" target="_blank">
+                <img class="portfolio-img" src="images/mayden-logo.png" alt="Mayden Academy Logo">
                 <div class="portfolio-cover">
                     <h2 class="portfolio-cover-link">GitHub link</h2>
                 </div>
             </a>
-            <a href="#" target="_blank"><h3>Title</h3></a>
-            <h4>This is a description placeholder for upcoming projects that can be added as I progress through the
-                course.</h4>
+            <a href="https://github.com/FelixLetheren/mayden-academy-logo" target="_blank"><h3>Mayden Academy
+                logo</h3></a>
+            <h4>A small project to recreate the Mayden Academy logo using just CSS and HTML</h4>
         </div>
     </div>
 </section>
