Fixed Aptitude test link.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <h2 class="portfolio-cover-link">GitHub link</h2>
                 </div>
             </a>
-            <a href="#" target="_blank"><h3>Mayden Academy Aptitude Test</h3></a>
+            <a href="https://github.com/Mayden-Academy/aptitude-test" target="_blank"><h3>Mayden Academy Aptitude Test</h3></a>
             <h4>A project working on legacy code from previous students on a larger code base. We used Gulp as a task runner to compile SASS.
             For our JS we used ES6. </h4>
         </div>
