Added Mayden Portal.

--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
             <h4>A app that displays cats by breed from a MySQL database using PHP 7. An API scrape is used to create and populate the database..</h4>
         </div>
         <div class="portfolio-item">
-            <a href="https://github.com/FelixLetheren/mayden-academy-logo" target="_blank">
-                <img class="portfolio-img" src="images/mayden-logo.png" alt="Mayden Academy Logo">
+            <a href="https://github.com/Mayden-Academy/AcademyPortal" target="_blank">
+                <img class="portfolio-img" src="images/portal.png" alt="Mayden Academy Portal">
                 <div class="portfolio-cover">
                     <h2 class="portfolio-cover-link">GitHub link</h2>
                 </div>
             </a>
-            <a href="https://github.com/FelixLetheren/mayden-academy-logo" target="_blank"><h3>Mayden Academy
-                logo</h3></a>
-            <h4>A small project to recreate the Mayden Academy logo using just CSS and HTML</h4>
+            <a href="https://github.com/Mayden-Academy/AcademyPortal" target="_blank"><h3>Mayden Academy Portal</h3></a>
+            <h4>A portal for Mayden Academy to manage their events, hiring partners, users etc. We used the Slim framework
+            for PHP using a MVC structure to add new features to the project and fix bugs.</h4>
         </div>
     </div>
 </section>
